Closed Bug 473938 Opened 16 years ago Closed 16 years ago

Stylesheets don't load without a safe browsing service

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: neil, Assigned: dcamp)

References

Details

(Keywords: fixed1.9.1, regression)

Attachments

(1 file)

The call to the safe browsing classifier in nsCSSLoader.cpp does not
check its return value correctly. It should either match the code in
nsObjectLoadingContent.cpp (ignore NS_ERROR_FACTORY_NOT_REGISTERED) or
nsDocShell.cpp (also ignore NS_ERROR_NOT_AVAILABLE). The code in
nsScriptLoader.cpp looks wrong too.
Flags: blocking-firefox3.1?
Attached patch fixSplinter Review
Attachment #357360 - Flags: superreview?(jonas)
Attachment #357360 - Flags: review?(jonas)
Attachment #357360 - Flags: superreview?(jonas)
Attachment #357360 - Flags: superreview+
Attachment #357360 - Flags: review?(jonas)
Attachment #357360 - Flags: review+
I pushed changeset fb428e861242 to mozilla-central as dcamp requested on IRC.
Assignee: nobody → dcamp
Severity: major → critical
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment on attachment 357360 [details] [diff] [review]
fix

We need this to be able to load stylesheets and scripts in projects that don't use safe browsing.
Attachment #357360 - Flags: approval1.9.1?
Attachment #357360 - Flags: approval1.9.1? → approval1.9.1+
Pushed changeset 24de3997ea60 to releases/mozilla-1.9.1
Flags: blocking-firefox3.1?
Keywords: fixed1.9.1
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1b3pre) Gecko/20090118 SeaMonkey/2.0a3pre - Build ID: 20090118061305

This bug affects both Firefox and SeaMonkey.

Style sheets (which had stopped being loaded in today's nightly, built shortly after midnight) work again in this hourly. IIUC similar verification should be done in Fx3.1 and Sm2 on all three of Lin, Win and Mac before setting verified1.9.1, and on Fx3.2 on all three platforms before setting VERIFIED. Anyone willing (and equipped) to test it?
Assignee: dcamp → nobody
Component: Phishing Protection → Style System (CSS)
Product: Firefox → Core
QA Contact: phishing.protection → style-system
Version: 3.0 Branch → Trunk
Firefox does have the safe browsing service, so this bug doesn't affect Firefox. This was obviously filed under Firefox because the bug that caused this bug was filed under Firefox.
oops -- Dave, I didn't mean to take this bug away from you.
Assignee: nobody → dcamp
(In reply to comment #7)
> Firefox does have the safe browsing service, so this bug doesn't affect
> Firefox. This was obviously filed under Firefox because the bug that caused
> this bug was filed under Firefox.

Ah, I see. Well, it looks weird to me to see under Firefox a bug which affects SeaMonkey but not Firefox. I moved it to "Core/Style System (CSS)" according to the symptoms I saw in bug 474193 and its dupes (and comment #0 mentions nsCSSLoader.cpp as the location of the error). Do you think another Product/Component would be more adequate (while still not excluding SeaMonkey)?
The point of putting bugs in the right component is to get bugs to the right people.  This bug is already fixed, so it doesn't matter (and it clearly got to the right people the way it was filed).  So please stop arguing about it.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: