Bug 473938 Stylesheets don't load without a safe browsing service r+sr=sicking