content/base/src/nsObjectLoadingContent.cpp
@@ -1754,10 +1754,6 @@ nsObjectLoadingContent::CheckClassifier(nsIChannel *aChannel)
   NS_ENSURE_SUCCESS(rv, rv);
 
   rv = classifier->Start(aChannel, PR_FALSE);
-  if (rv == NS_ERROR_FACTORY_NOT_REGISTERED) {
-    // no URI classifier, ignore this
-    return NS_OK;
-  }
   NS_ENSURE_SUCCESS(rv, rv);
 
   mClassifier = classifier;
